backend/CD/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-backend
  namespace: dev
spec:
  minReadySeconds: 3
  replicas: 1
  selector: 
    matchExpressions:
      - key: app
        operator: In
        values:
          - task-manager-service-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: task-manager-backend-pod
      labels:
        app: task-manager-service-app
    spec:
      containers:
        - name: task-manager-backend
          image: 984912521466.dkr.ecr.ap-southeast-1.amazonaws.com/task-manager-backend:v1.0.0
          imagePullPolicy: Always
        
          startupProbe:
            httpGet:  
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value:  localhost
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 1

          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          ports:          
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "80Mi"
            limits:
              cpu: "80m"
              memory: "100Mi"
