backend/CD/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-task-manager
  namespace: dev
spec:
  minReadySeconds: 3
  replicas: 1
  serviceName: db-task-manager
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - db-task-manager
  template:
    metadata:
      labels:
        app: db-task-manager
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: task-manager-db
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata: 
        name: task-manager-db
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: task-manager-ebs
        resources:
          requests:
            storage: 256Mi
