backend/CD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-backend-service-svc-dp
  namespace: dev
spec:
  type: LoadBalancer
  selector: 
    app: task-manager-service-app
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
