backend/CD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - host: mysitedesign.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task-manager-backend-service-svc-dp
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-frontend-svc
                port:
                  number: 5173
